# Robot_flock_simulisation_C-

./: CMakeLists.txt  LICENSE.md  Makefile  README.md
include/graph/: graph.hpp  node.hpp  randomgraph.hpp
include/robot/: robot.hpp  robotsmanager.hpp
include/task/: task.hpp  tasksmanager.hpp
include/web/: server.hpp
src/: CMakeLists.txt  main.cpp
src/assets/: index.html
src/assets/scripts/: fetchservice.js  graph.js  graphcontrols.js  graphinfos.js  index.js  robotscontrols.js  robotsinfos.js  tasks.js  taskscontrols.js
src/assets/styles/: app.css
src/graph/: graph.cpp  node.cpp  randomgraph.cpp
src/robot/: robot.cpp  robotsmanager.cpp
src/task/: task.cpp  tasksmanager.cpp
src/web/: server.cpp
tests/: CMakeLists.txt  testmain.cpp
